<resources>
    <string name="title_activity_task_list">TaskListActivity</string>

    <!-- Activities and menu strings -->
    <string name="app_name">DoNext</string>
    <string name="action_settings">Settings</string>
    <string name="action_newTab">New list</string>
    <string name="action_editTabs">Edit lists</string>
    <string name="action_about">About</string>
    <string name="action_new_task">New task</string>
    <string name="action_edit_task">Edit</string>
    <string name="action_changeLayout">Change layout</string>

    <!-- Strings related to tabs -->
    <string name="tab_left_arrow">Left scroll arrow</string>
    <string name="tab_right_arrow">Right scroll arrow</string>

    <!-- Strings related to Task List edition -->
    <string name="task_list_new_list_hint">New list name</string>
    <string name="task_list_new_list_create">Create</string>
    <string name="task_list_new_list_error">List name cannot be blank</string>
    <string name="task_list_delete">Delete</string>
    <string name="task_list_confirmation_delete">Delete task list?</string>
    <string name="task_list_drag_handle">Drag handle</string>
    <string name="task_list_today">Today</string>
    <string name="task_list_today_list_error">Name \"Today\" is reserved. You may activate the Today list from the Settings.</string>

    <!-- Strings related to new task dialog -->
    <string name="new_task_list">List</string>
    <string name="new_task_name">Name</string>
    <string name="new_task_name_hint">New task name</string>
    <string name="new_task_name_error">Task name cannot be blank</string>
    <string name="new_task_description">Description</string>
    <string name="new_task_description_hint">Optional task description</string>
    <string name="new_task_priority">Priority</string>
    <string name="new_task_priority_low">Low</string>
    <string name="new_task_priority_normal">Normal</string>
    <string name="new_task_priority_high">High</string>
    <string name="new_task_due_date">Due date</string>
    <string name="new_task_save">Save</string>
    <string name="new_task_cancel">Cancel</string>
    <string name="new_task_delete">Delete</string>

    <!-- Strings related to task details activity -->
    <string name="task_details_activity_title">Details</string>
    <string name="task_no_tasks">Yay! No more tasks!</string>
    <string name="task_total_cycles">%1$d cycle%2$s</string>
    <string name="task_total">%1$d task%2$s</string>
    <string name="task_remaining">%1$d more task%2$s</string>
    <string name="task_alarm">Task is past due date</string>

    <!-- String related to the SnackBar -->
    <string name="snackabar_label">Task %s</string>
    <string name="snackabar_action_done">done</string>
    <string name="snackabar_action_next">nexted</string>
    <string name="snackabar_action_deleted">deleted</string>
    <string name="snackabar_button">Undo</string>

    <!-- Strings related to the confirmation dialog -->
    <string name="task_confirmation_done_text">Mark task as Done?</string>
    <string name="task_confirmation_next_text">NEXT, do this one later?</string>
    <string name="task_confirmation_delete_text">Delete this task?</string>
    <string name="task_confirmation_done_button">Done</string>
    <string name="task_confirmation_next_button">Next</string>
    <string name="task_confirmation_delete_button">Delete</string>
    <string name="task_confirmation_yes_button">Yes</string>
    <string name="task_confirmation_no_button">Cancel</string>
    <string name="task_confirmation_never_button">Never ask again</string>

    <!-- Strings related to Settings -->
    <string name="settings_category_tasks">Tasks</string>
    <string name="settings_category_tasklists">Task lists</string>
    <string name="settings_confirm_message">Mark task as</string>
    <string name="settings_confirm_donext">Confirm on next?</string>
    <string name="settings_confirm_markdone">Confirm on done?</string>
    <string name="settings_confirm_delete">Confirm on delete?</string>
    <string name="settings_task_layout">Task layout</string>
    <string name="settings_today_title">Today list</string>
    <string name="settings_today_enable">Enable Today list?</string>
    <string name="settings_today_desc">The Today list is a special kind of list, in which tasks only exist for the current day. Each day, the list is reset.</string>
    <string name="settings_today_action_title">Action at the end of the day</string>
    <string name="settings_max_lists_label">Maximum number of lists</string>

    <!-- Strings related to About -->
    <string name="about_version_donext">DoNext version %s</string>
    <string name="about_version_android">Android version %d</string>
    <string name="about_link" translatable="false">https://github.com/wismna</string>
    <string name="action_todayList">Today View</string>
    <string name="title_activity_today">Today</string>
    <string name="new_task_today">Add task to Today View?</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today_search_hint">Search...</string>
    <string name="action_today_select">Select tasks</string>
</resources>
