<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_category_tasks" >
        <SwitchPreference
            android:key="pref_conf_next"
            android:title="@string/settings_confirm_donext"
            android:defaultValue="true" />
        <SwitchPreference
            android:key="pref_conf_done"
            android:title="@string/settings_confirm_markdone"
            android:defaultValue="true" />
        <SwitchPreference
            android:key="pref_conf_del"
            android:title="@string/settings_confirm_delete"
            android:defaultValue="true" />
        <ListPreference
            android:key="pref_conf_task_layout"
            android:title="@string/settings_task_layout"
            android:dialogTitle="@string/settings_task_layout"
            android:entries="@array/settings_task_layouts"
            android:entryValues="@array/settings_task_layout_values"
            android:summary="%s"
            android:defaultValue="1" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_category_tasklists">
        <SwitchPreference
            android:key="pref_conf_tasklist_del"
            android:title="@string/settings_confirm_delete"
            android:defaultValue="true" />
        <ListPreference
            android:key="pref_conf_max_lists"
            android:title="@string/settings_max_lists_label"
            android:dialogTitle="@string/settings_max_lists_label"
            android:entries="@array/settings_max_lists_number"
            android:entryValues="@array/settings_max_lists_number"
            android:summary="%s"
            android:defaultValue="5" />
        <PreferenceScreen
            android:title="@string/settings_today_title">
            <PreferenceCategory
                android:title="@string/settings_today_title" />
            <SwitchPreference
                android:key="pref_conf_today_enable"
                android:title="@string/settings_today_enable"
                android:summary="@string/settings_today_desc"/>
            <ListPreference
                android:key="pref_conf_today_action"
                android:title="@string/settings_today_action_title"
                android:dialogTitle="@string/settings_today_title"
                android:entries="@array/settings_today_actions"
                android:entryValues="@array/settings_today_action_values"
                android:summary="%s"
                android:defaultValue="2" />
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>