<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_task_list"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <Spinner
        android:id="@+id/new_task_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </Spinner>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_task_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <EditText
        android:id="@+id/new_task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_task_description"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <EditText
        android:id="@+id/new_task_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="3"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_task_priority"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <RadioGroup
        android:id="@+id/new_task_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/new_task_priority_low"
            android:text="@string/new_task_priority_low"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </RadioButton>
        <RadioButton
            android:id="@+id/new_task_priority_normal"
            android:text="@string/new_task_priority_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true">
        </RadioButton>
        <RadioButton
            android:id="@+id/new_task_priority_high"
            android:text="@string/new_task_priority_high"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </RadioButton>
    </RadioGroup>
    <LinearLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/new_task_save"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/new_task_save" />
        <Button
            android:id="@+id/new_task_cancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/new_task_cancel"/>
    </LinearLayout>
</LinearLayout>