<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_margin"
        android:orientation="vertical"
        tools:context=".activities.MainActivity">
        <TextView
            android:id="@+id/new_task_list_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_task_list"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <Spinner
            android:id="@+id/new_task_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/new_task_list_label">
        </Spinner>
        <TextView
            android:id="@+id/new_task_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_task_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_below="@id/new_task_list_label"/>
        <EditText
            android:id="@+id/new_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_task_name_hint"
            android:maxLines="1"
            android:inputType="text"
            android:layout_below="@id/new_task_name_label"/>
        <TextView
            android:id="@+id/new_task_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_task_description"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_below="@id/new_task_name" />
        <EditText
            android:id="@+id/new_task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_task_description_hint"
            android:gravity="top|start"
            android:lines="3"
            android:layout_below="@id/new_task_description_label" />
        <TextView
            android:id="@+id/new_task_priority_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_task_priority"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_below="@id/new_task_description" />
        <RadioGroup
            android:id="@+id/new_task_priority"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_task_priority_label" >
            <RadioButton
                android:id="@+id/new_task_priority_low"
                android:text="@string/new_task_priority_low"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </RadioButton>
            <RadioButton
                android:id="@+id/new_task_priority_normal"
                android:text="@string/new_task_priority_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true">
            </RadioButton>
            <RadioButton
                android:id="@+id/new_task_priority_high"
                android:text="@string/new_task_priority_high"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </RadioButton>
        </RadioGroup>
        <TextView
            android:id="@+id/new_task_due_date_label"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/new_task_due_date"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_toEndOf="@id/new_task_priority"
            android:layout_below="@id/new_task_description" />
        <DatePicker
            android:id="@+id/new_task_due_date"
            android:calendarViewShown="true"
            android:spinnersShown="false"
            android:layout_width="800dp"
            android:layout_height="800dp"
            android:layout_toEndOf="@id/new_task_priority"
            android:layout_below="@id/new_task_due_date_label" />
    </RelativeLayout>
</ScrollView>