<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.wismna.geoffroy.donext.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:onClick="openSettings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_editTabs"
        android:orderInCategory="60"
        android:title="@string/action_editTabs"
        android:onClick="openTaskLists"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="50"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
